# Rusteer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: deezloader.rs  error.rs  lib.rs  rusteer.rs  tagging.rs
src/api/: gateway.rs  mod.rs  public.rs
src/converters/: mod.rs
src/crypto/: mod.rs
src/models/: album.rs  artist.rs  common.rs  mod.rs  playlist.rs  track.rs
