[package]
name = "rusteer"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Deezer track fetching API"
license = "MIT"

[dependencies]
# HTTP client with cookie support
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Cryptography
md-5 = "0.10"
sha1 = "0.10"
blowfish = "0.9"
aes = "0.8"
ctr = "0.9"
hex = "0.4"
cipher = "0.4"
byteorder = "1.5"

# Logging
tracing = "0.1"

# Audio metadata tagging
lofty = "0.22"
clap = { version = "4.4", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
